--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li>
         <h4><a href="./public/movie-ranking.html">Movie Rankings</a></h4>
         <img
-          src="./assets/images/movie-ranking.png/"
+          src="./assets/images/movie-ranking.png"
           alt="Screenshot of movie ranking web page"
         />
       </li>
