--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <img
           src="./assets/images/movie-ranking.png"
           alt="Screenshot of movie ranking web page"
+          height = "200"
         />
       </li>
       <li>
